--- a/examples/IvarConfig.html
+++ b/examples/IvarConfig.html
@@ -20,7 +20,7 @@
 <!-- >div id="viewer" style="width:100%; height:60%"></div -->
 <div id="elm" touch-action="none" style="margin:0px; padding:0px; overflow:hidden; touch-action:none"></div>
 <!-- script src="elm-pep.js"></script -->
-<script src="main.js"></script>
+<script src="IvarConfig.js"></script>
 <script>
   const crypto = window.crypto || window.msCrypto;
   const getRandomInts = (n) => {
